@@ -225,6 +225,9 @@ Bug Fixes
   
 * SOLR-8085: Fix a variety of issues that can result in replicas getting out of sync. (yonik, Mark Miller)
 
+* SOLR-8094: HdfsUpdateLog should not replay buffered documents as a replacement to dropping them.
+  (Mark Miller)
+
 Optimizations
 ----------------------
 
